# pronom-cli

./: .gitignore  README.md  pyproject.toml
src/pronom_cli/: config.py  logger.py  main.py  repo.json  service.py  updater.json  updater.py  utils.py
src/pronom_cli/models/: action.py  entry.py  pronom.py
src/pronom_cli/repository/: base.py  fileformats.py  fileinfo.py  filext.py  manager.py  pronom.py
